--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "styled-components": "^6.1.13",
     "swr": "^2.2.5"
